--- a/app/src/main/res/layout/addmemory_layout.xml
+++ b/app/src/main/res/layout/addmemory_layout.xml
@@ -34,6 +34,7 @@
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/etTitle"
+                android:inputType="textPersonName"
                 android:layout_gravity="center_horizontal"
                 android:hint="Title" />
 
@@ -43,11 +44,12 @@
                 android:id="@+id/etDescription"
                 android:layout_gravity="center_horizontal"
                 android:hint="Description"
-                android:lines="4" />
+                android:lines="1" />
 
             <EditText
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
+                android:inputType="textPersonName"
                 android:id="@+id/etPlace"
                 android:layout_gravity="center_horizontal"
                 android:hint="Place" />
