--- a/app/src/main/res/layout/addvacation_layout.xml
+++ b/app/src/main/res/layout/addvacation_layout.xml
@@ -31,6 +31,7 @@
             android:gravity="center_horizontal">
 
             <EditText
+                android:inputType="textPersonName"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/etTitle"
@@ -43,9 +44,10 @@
                 android:id="@+id/etDescription"
                 android:layout_gravity="center_horizontal"
                 android:hint="Description"
-                android:lines="4" />
+                android:lines="1" />
 
             <EditText
+                android:inputType="textPersonName"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/etPlace"
