--- a/app/src/main/res/layout/addmedia_layout.xml
+++ b/app/src/main/res/layout/addmedia_layout.xml
@@ -71,17 +71,11 @@
             android:layout_height="wrap_content"
             android:gravity="center|center_horizontal">
 
-            Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Cancel"
-                android:id="@+id/btnCancel" />
-
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Add file"
-                android:id="@+id/btnConfirmVacation"
+                android:id="@+id/btnConfirm"
                 android:backgroundTint="#FF70BA78"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp" />
