--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -49,8 +49,7 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/checkboxHolder"
-                android:padding="10dp">
+                android:id="@+id/checkboxHolder">
 
                 <CheckBox
                     android:layout_width="wrap_content"
