--- a/app/src/main/res/layout/create_acc_layout.xml
+++ b/app/src/main/res/layout/create_acc_layout.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:gravity="center"
+    android:padding="70dp">
 
     <LinearLayout
         android:orientation="vertical"
@@ -32,10 +34,10 @@
 
         <LinearLayout
             android:orientation="vertical"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/inputCreateAccLayout"
-            android:padding="20dp">
+            android:padding="10dp">
 
             <EditText
                 android:layout_marginTop="5dp"
@@ -90,6 +92,7 @@
                 android:ellipsize="start"
                 android:hint="Email"
                 android:id="@+id/etEmail"/>
+
         </LinearLayout>
     </LinearLayout>
 
@@ -98,7 +101,6 @@
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
         android:gravity="center|center_horizontal">
 
         <Button
@@ -106,8 +108,7 @@
             android:layout_height="wrap_content"
             android:text="Create Account"
             android:id="@+id/btnCreateAccCreate"
-            android:backgroundTint="#FF70BA78"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp" />
+            android:backgroundTint="#FF70BA78" />
     </LinearLayout>
+
 </RelativeLayout>
