--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -14,6 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clickable="true"
+            android:queryHint="Search user's memories"
             android:layout_marginTop="7dp"
             android:layout_marginLeft="7dp"
             android:layout_marginRight="7dp"
