--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -19,6 +19,14 @@
             android:layout_marginLeft="7dp"
             android:layout_marginRight="7dp"
             android:layout_marginBottom="7dp" />
+        <Button
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginLeft="-70dp"
+            android:drawableStart="@android:drawable/ic_menu_search"
+            android:id="@+id/btnSearch"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_gravity="right" />
     </LinearLayout>
 
     <LinearLayout
